--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
           <img src="img/IMG_2492.jpg" alt="" class="img-fluid mb-3 rounded" />
         </div>
         <div class="col-md-6">
-          <h6> Hi, I'm a huge lover of Front End Design/Development! I loved combining my creative side with a dash of
-            coding.
+          <h6> Hi, I'm Nikki Sato and I'm a huge lover of Front End Design/Development! I loved combining my creative side with a dash of coding. I'm also a local portland photography you can catch me wandering around portland catching reflections.
           </h6>
 
           <section>
